2018-03-02 Fixed problem with scaling in Connection addon
2018-03-02 Added property to set ordering items to starting position
2018-03-01 Fixed problem with gap parsing with opening tag character 
2018-03-01 Fixed problem with opening gaps on mobile devices in eKeyboard module
2018-02-28 Fixed problem with restoring state in video addon
2018-02-28 Fixed problem with hover in iOS
2018-02-27 Added localization for alt-text in some modules and layout in eKeyboard
2018-02-27 Renamed Hierarichal Lesson Report property
2018-02-23 Readded works with property in Page Progress.
2018-02-22 Changed when Text has no gaps it does not require escape to deactivate in WCAG navigation
2018-02-21 Added TTS support for Reset button
2018-02-21 Added TTS plays the title of the new page
2018-02-20 Added Page mapping ids translations, Size and ModuleDimensions equals implementations
2018-02-20 Added TTS support for SHow Answers Button
2018-02-15 Added TTS support for the Text's Draggable Gap
2018-02-15 Added TTS support for Check Answers Button 
2018-02-15 Fixed issue with scaling in Figure Drawing on mobile devices
2018-02-14 Fixed issue with reseting module in Catch module
2018-02-13 Fixed issues with Glossary scaling on mobile devices
2018-02-13 Fixed problem with resolving url in inline css
2018-02-12 Fixed Catch addon double click behaviour on mobile devices, paddle is always appearing and can't run past right edge of screen. Also simulation is paused on show answers and checks answers, and it calculates max score.
2018-02-12 Deselecting Double State Button on the end of Multiaudio track connected via Audio Binder.
2018-02-09 Fixed dragging out elements from Draggable Gap.
2018-02-09 Fixed speak and playTitle commands in TTS addon
2018-02-07 Added attribute role in TrueFalse for screen reader apps.
2018-02-06 Fixed issues with scaling in Drawing
2018-02-01 Fixed issue with saving empty inlineStyles or classStyles.