@@ -1,0 +1,9 @@
+server: http://localhost:9876
+
+load:
+    - ../tools/jquery-1.7.1.js
+    - ../tools/sinon-2.4.1.js
+    - ../../src/main/java/com/lorepo/icplayer/public/libs/commons.js
+    - ../../src/main/java/com/lorepo/icplayer/public/libs/htmlparser.min.js
+    - src/*.js
+    - test/*.js
