@@ -1,0 +1,7 @@
+<div class="timer-wrapper">
+    <span class="hours"></span>
+    <span class="separator hours-separator"></span>
+    <span class="minutes"></span>
+    <span class="separator minutes-separator"></span>
+    <span class="seconds"></span>
+</div>
