@@ -1,0 +1,6 @@
+// No tests yet. Test case added for consistency purposes
+TestCase("Sample test case", {
+    'test sample': function() {
+        assertTrue(true);
+    }
+});
