@@ -88,6 +88,7 @@ Table_Of_Contents
 text_identification
 Text_Selection
 TextAudio
+Timer
 TrueFalse
 video
 WritingCalculations
