@@ -140,6 +140,7 @@ public class AddonDescriptorFactory {
 		addDescriptor("Grid_Scene", "scripting_menu");
 		addDescriptor("BlocklyCodeEditor", "scripting_menu");
 		addDescriptor("Text_To_Speech", "scripting_menu");
+		addDescriptor("Timer", "scripting_menu");
 
 		// LEARN PEN
 		addDescriptor("LearnPen", "learn_pen_menu");
