@@ -1329,6 +1329,14 @@ var ice_dictionary_en = {
 	"Clock_property_is_disable": "Is Disabled",
 	"Clock_property_is_activity": "Is Activity",
     "Clock_property_continuous_events" : "Continuous events",
+	"Timer_info": "Addon Timer allows users to add timer to a presentation. It works in two modes: Timer (it counts time from the defined value to 0) and Stopwatch (it counts time up from 0).",
+	"Timer_name": "Timer",
+	"Timer_property_mode": "Mode",
+	"Timer_property_time": "Time",
+	"Timer_property_immediate_start": "Immediate start",
+	"Timer_property_send_event_every_second": "Send event every second",
+	"Timer_property_show_hours": "Show hours",
+	"Timer_property_enable_reset": "Enable reset",
 	"SwiffyAnimation_info" : "Enables users to embed animations and other projects created in Adobe Flash program and converted with Google Swiffy plugin. First, it is necessary to configure certain properties in the addon’s side menu, including Animations (where you add Swiffy file) and Initial animation. The only way to control swiffy animations is to use the addon’s setVars command.",
 	"SwiffyAnimation_name" : "Swiffy Animation",
 	"SwiffyAnimation_property_animations" : "Animations",
