@@ -1317,6 +1317,14 @@ var ice_dictionary_fr = {
 "Clock_property_is_disable": "Est désactivé",
 "Clock_property_is_activity": "Est un exercice",
 "Clock_property_continuous_events" : "Événements continus",
+"Timer_info": "Addon Timer allows users to add timer to a presentation. It works in two modes: Timer (it counts time from the defined value to 0) and Stopwatch (it counts time up from 0).",
+"Timer_name": "Timer",
+"Timer_property_mode": "Mode",
+"Timer_property_time": "Time",
+"Timer_property_immediate_start": "Immediate start",
+"Timer_property_send_event_every_second": "Send event every second",
+"Timer_property_show_hours": "Show hours",
+"Timer_property_enable_reset": "Enable reset",
 "SwiffyAnimation_info" : "Permet aux utilisateurs d'intégrer des animations et d'autres projets créés dans Adobe Flash et convertis avec le plugin Google Swiffy. Tout d'abord, il est nécessaire de configurer certaines propriétés dans le menu latéral du module, comme les animations (où vous ajoutez le fichier Swiffy) et l'animation initiale. La seule façon de contrôler animations Swiffy est d'utiliser la commande du module externe setVars.",
 "SwiffyAnimation_name" : "Animation Swiffy",
 "SwiffyAnimation_property_animations" : "Animations",
