@@ -1317,6 +1317,14 @@ var ice_dictionary_mx = {
 	"Clock_property_is_disable": "Inhabilitar",
 	"Clock_property_is_activity": "Es actividad",
     "Clock_property_continuous_events" : "Eventos continuos",
+	"Timer_info": "Addon Timer allows users to add timer to a presentation. It works in two modes: Timer (it counts time from the defined value to 0) and Stopwatch (it counts time up from 0).",
+	"Timer_name": "Timer",
+	"Timer_property_mode": "Mode",
+	"Timer_property_time": "Time",
+	"Timer_property_immediate_start": "Immediate start",
+	"Timer_property_send_event_every_second": "Send event every second",
+	"Timer_property_show_hours": "Show hours",
+	"Timer_property_enable_reset": "Enable reset",
 	"SwiffyAnimation_info": "Permite a los usuarios a insertar animaciones y otros proyectos creados en el programa Adobe Flash y convertidos con el complemento Google Swiffy. En primer lugar, es necesario configurar ciertas propiedades en el menú lateral del addon, incluyendo las Animaciones (donde se agrega el archivo Swiffy) y la Animación de inicio. La única manera de controlar las Animaciones Swiffy es usar el comando setVars del addon.",
 	"SwiffyAnimation_name": "Animación Swiffy",
 	"SwiffyAnimation_property_animations": "Animaciones",
