@@ -1316,6 +1316,14 @@
 	"Clock_property_is_disable": "Jest wyłączony",
 	"Clock_property_is_activity": "Jest ćwiczeniem",
     "Clock_property_continuous_events" : "Zdarzenia ciągłe",
+	"Timer_info": "Addon Timer allows users to add timer to a presentation. It works in two modes: Timer (it counts time from the defined value to 0) and Stopwatch (it counts time up from 0).",
+	"Timer_name": "Timer",
+	"Timer_property_mode": "Mode",
+	"Timer_property_time": "Time",
+	"Timer_property_immediate_start": "Immediate start",
+	"Timer_property_send_event_every_second": "Send event every second",
+	"Timer_property_show_hours": "Show hours",
+	"Timer_property_enable_reset": "Enable reset",
 	"SwiffyAnimation_info" : "Pozwala na osadzenie animacji utworzonej w programie Adobe Flash i skonwertowanej za pomocą Google Swiffy. W Addonie można wykorzystać więcej niż jedną animację; aby wszystko działało poprawnie, wystarczy skonfigurować wybrane parametry w menu Właściwości.",
 	"SwiffyAnimation_name" : "Animacja Google Swiffy",
 	"SwiffyAnimation_property_animations" : "Animacje",
