@@ -1,3 +1,4 @@
+2018-03-05 Added Timer addon
 2018-03-02 Fixed problem with scaling in Connection addon
 2018-03-02 Added property to set ordering items to starting position
 2018-03-01 Fixed problem with gap parsing with opening tag character 
